--- a/app/views/create-account/fixed-penalty/check-account-details.html
+++ b/app/views/create-account/fixed-penalty/check-account-details.html
@@ -281,7 +281,7 @@
               Notice to owner or hirer number (NTO/NTH)
             </dt>
             <dd class="govuk-summary-list__value">
-              {{ data['noticeToOwner']}}
+              {{ data['noticeToOwner'] or "Not provided" }}
             </dd>
           </div>
 
