--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -5,6 +5,10 @@
 
 // Add extra styles here
 
+.govuk-notification-banner .warning {
+  border: 5px solid #d4351c;
+  background-color: #d4351c;
+}
 
 .imposition {
   padding: 20px 5px 0px 5px;
