--- a/app/views/create-account/checker/deleted.html
+++ b/app/views/create-account/checker/deleted.html
@@ -4,7 +4,7 @@
 
 {% block beforeContent %}
 
-<a href="../index.html" class="govuk-back-link">Back</a>
+<!-- <a href="../index.html" class="govuk-back-link">Back</a> -->
 
 {% endblock %}
 
