--- a/app/views/create-account/checker/deleted.html
+++ b/app/views/create-account/checker/deleted.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends "layouts/checker.html" %}
 
 {% set pageName = "Review accounts" %}
 
@@ -34,7 +34,7 @@
 
         <ul class="moj-sub-navigation__list">
           <li class="moj-sub-navigation__item">
-            <a class="moj-sub-navigation__link"  href="in-review.html">
+            <a class="moj-sub-navigation__link"  href="to-review.html">
               To review
               <!-- <span id="notifications" class=" govuk-!-margin-left-1 moj-notification-badge">6</span>         -->
             </a>
