--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,7 +13,7 @@
       <!-- <p class="govuk-body"><a href="./create-account/index.html" class="govuk-link--no-visited-state">Check and input accounts</a></p>
       <p class="govuk-body"><a href="./search/search.html" class="govuk-link--no-visited-state">Search for an account</a></p> -->
 
-      <p class="govuk-body">
+      <!-- <p class="govuk-body">
         Thank you for taking part in research for the new Opal service.
       </p>
 
@@ -45,7 +45,7 @@
         </li>
       </ul>
 
-      <h2 class="govuk-heading-m">Start the prototype</h2>
+      <h2 class="govuk-heading-m">Start the prototype</h2> -->
       
       <!-- <p class="govuk-body">
         This tool has been built to help you give us feedback about the new service.
@@ -56,6 +56,14 @@
         href: "./create-account/create-account.html",
         isStartButton: true
       }) }}
+
+      <p class="govuk-body">
+       <a class="govuk-link--no-visited-state" href="./create-account/fixed-penalty-uploads/to-review.html">
+        Fixed Penalty uploads
+       </a>
+      </p> 
+
+      
 
       
       
