--- a/app/views/create-account/checker/to-review.html
+++ b/app/views/create-account/checker/to-review.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends "layouts/checker.html" %}
 
 {% set pageName = "Review accounts" %}
 
@@ -25,7 +25,7 @@
     </div> -->
     
 
-    <div class="govuk-notification-banner warning" style="border: 5px solid #d4351c; background-color: #d4351c;" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+    <!-- <div class="govuk-notification-banner warning" style="border: 5px solid #d4351c; background-color: #d4351c;" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
       <div class="govuk-notification-banner__header">
         <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
           Important
@@ -45,7 +45,7 @@
           href: "#"
         }) }}
       </div>
-    </div>
+    </div> -->
 
     <h1 class="govuk-heading-l">{{pageName}}</h1>
 
