--- a/app/views/index.html
+++ b/app/views/index.html
@@ -51,11 +51,11 @@
         This tool has been built to help you give us feedback about the new service.
       </p> -->
 
-      {{ govukButton({
+      <!-- {{ govukButton({
         text: "Start",
         href: "./create-account/create-account.html",
         isStartButton: true
-      }) }}
+      }) }} -->
 
       <p class="govuk-body">
        <a class="govuk-link--no-visited-state" href="./create-account/fixed-penalty-uploads/to-review.html">
