--- a/app/views/create-account/fixed-penalty-uploads/rejected.html
+++ b/app/views/create-account/fixed-penalty-uploads/rejected.html
@@ -1,4 +1,4 @@
-{% extends "layouts/checker.html" %}
+{% extends "layouts/fixed-penalty.html" %}
 
 {% set pageName = "Fixed Penalty uploads" %}
 
@@ -25,7 +25,7 @@
             <div class="moj-button-menu__wrapper">
       
               <button type="submit" class="govuk-button moj-button-menu__item govuk-button--secondary moj-page-header-actions__action" data-module="govuk-button">
-                Reports
+                Report / Register
               </button>
       
             </div>
