--- a/app/views/layouts/fixed-penalty.html
+++ b/app/views/layouts/fixed-penalty.html
@@ -48,11 +48,11 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 
         <ul class="moj-primary-navigation__list">
           <li class="moj-primary-navigation__item">
-            <a class="moj-primary-navigation__link" aria-current="page" href="#">Review accounts</a>
+            <a class="moj-primary-navigation__link" href="../checker/to-review.html">Review accounts</a>
           </li>
 
           <li class="moj-primary-navigation__item">
-            <a class="moj-primary-navigation__link" href="../fixed-penalty-uploads/to-review.html">Fixed Penalty uploads</a>
+            <a class="moj-primary-navigation__link" aria-current="page" href="#">Fixed Penalty uploads</a>
           </li>
         </ul>
 
