--- a/app/views/create-account/fixed-penalty-uploads/errors.html
+++ b/app/views/create-account/fixed-penalty-uploads/errors.html
@@ -25,7 +25,7 @@
             <div class="moj-button-menu__wrapper">
       
               <button type="submit" class="govuk-button moj-button-menu__item govuk-button--secondary moj-page-header-actions__action" data-module="govuk-button">
-                Report / Register
+                Print register
               </button>
       
             </div>
@@ -36,28 +36,32 @@
       </div>
 
       <nav class="moj-sub-navigation" aria-label="Sub navigation">
-
         <ul class="moj-sub-navigation__list">
           <li class="moj-sub-navigation__item">
             <a class="moj-sub-navigation__link" href="to-review.html">
-              To publish
+              To publish 
+              <!-- <span id="notifications" class="govuk-!-margin-left-1 moj-notification-badge">6</span> -->
             </a>
           </li>
-      
           <li class="moj-sub-navigation__item">
-            <a class="moj-sub-navigation__link" aria-current="page" href="rejected.html">
-              Rejected
+            <a class="moj-sub-navigation__link" href="published.html">
+              Published
+              <!-- <span id="notifications" class="govuk-!-margin-left-1 moj-notification-badge">1</span> -->
+            </a>
+          </li>
+          <li class="moj-sub-navigation__item">
+            <a class="moj-sub-navigation__link" aria-current="page"  href="errors.html">
+              Upload errors
               <!-- <span id="notifications" class="govuk-!-margin-left-1 moj-notification-badge">1</span> -->
             </a>
           </li>
         </ul>
-      
       </nav>
 
-      <h2 class="govuk-heading-m ">Rejected</h2>
+      <h2 class="govuk-heading-m ">Upload errors</h2>
 
 
-      <p class="govuk-body">No uploaded accounts have been rejected.</p>
+      <p class="govuk-body">No accounts with errors have been processed in the past 7 days.</p>
 
       <!-- <div class="moj-scrollable-pane">
 
