--- a/app/views/create-account/fixed-penalty-uploads/to-review.html
+++ b/app/views/create-account/fixed-penalty-uploads/to-review.html
@@ -33,7 +33,7 @@
           <div class="moj-button-menu__wrapper">
     
             <button type="submit" class="govuk-button moj-button-menu__item govuk-button--secondary moj-page-header-actions__action" data-module="govuk-button">
-              Report / Register
+              Print register
             </button>
     
           </div>
@@ -53,27 +53,33 @@
           </a>
         </li>
         <li class="moj-sub-navigation__item">
-          <a class="moj-sub-navigation__link" href="rejected.html">
-            Rejected
+          <a class="moj-sub-navigation__link" href="published.html">
+            Published
             <!-- <span id="notifications" class="govuk-!-margin-left-1 moj-notification-badge">1</span> -->
           </a>
         </li>
+        <li class="moj-sub-navigation__item">
+          <a class="moj-sub-navigation__link" href="errors.html">
+            Upload errors
+            <!-- <span id="notifications" class="govuk-!-margin-left-1 moj-notification-badge">1</span> -->
+          </a>
         </li>
       </ul>
     </nav>
 
-    <h2 class="govuk-heading-m">To publish</h2>
+    <!-- <h2 class="govuk-heading-m">To publish</h2> -->
 
-    {{ govukButton({
+    <!-- {{ govukButton({
       text: "Publish",
       href: "./confirmation.html",
       classes: "govuk-!-margin-bottom-4"
-    }) }}
+    }) }} -->
 
     <style>
     .govuk-table__header {
       vertical-align: middle;
     }
+
     .govuk-table__cell {
       vertical-align: middle;
     }
@@ -84,11 +90,15 @@
     }
     
     .govuk-table__header, .govuk-table__cell {
-      padding: 5px 20px 5px 0;
+      padding: 4px 20px 4px 0;
+    }
+
+    #select-all {
+      width: 20px;
     }
     </style>
 
-    <table class="govuk-table" data-module="moj-multi-select" data-multi-select-checkbox="#select-all">
+    <!-- <table class="govuk-table" data-module="moj-multi-select" data-multi-select-checkbox="#select-all">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th class="govuk-table__header" scope="col" id="select-all" style="width: 0%;"></th>
@@ -214,26 +224,65 @@
         </tr>
 
       </tbody>
-    </table>
+    </table> -->
 
   </div>
 </div>
 
-<!-- <div class="govuk-grid-row">
+<div class="govuk-grid-row">
   <div class="govuk-grid-column-one-half">
     <h2 class="govuk-heading-m">To publish</h2>
-    {% if data['published-accounts'] == "true" %}
-    <p class="govuk-body">There are no accounts to publish.</p>
-    {% else %}
-    <p class="govuk-body">You have 20 accounts to review and publish.</p>
+    
+    <p class="govuk-body">There are 12 accounts to register, review and  publish.</p>
+    
+    <form method="post" novalidate action="add-collection-orders">
+      <table class="govuk-table" data-module="moj-multi-select" data-multi-select-checkbox="#select-all">
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header" scope="col" id="select-all" name="business-unit-upload" value="select-all" ></th>
+            <th class="govuk-table__header" scope="col" style="width: 40%;">Business unit</th>
+            <th class="govuk-table__header" scope="col" >Accounts</th>
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
 
-    {{ govukButton({
-      text: "Review accounts",
-      href: "./add-collection-orders.html"
-    }) }}
-    {% endif %}
+          <tr class="govuk-table__row govuk-table__row--selected">
+            <td class="govuk-table__cell">
+              <div class="govuk-checkboxes__item govuk-checkboxes--small moj-multi-select__checkbox">
+                <input type="checkbox" class="govuk-checkboxes__input" name="business-unit-upload" value="avon_somerset" id="avon_somerset">
+                <label class="govuk-label govuk-checkboxes__label govuk-!-padding-0" for="avon_somerset">
+                  <span class="govuk-visually-hidden">Select Avon and Somerset</span>
+                </label>
+              </div>
+            </td>
+            <td class="govuk-table__cell">Avon and Somerset</td>
+            <td class="govuk-table__cell">7</td>
+          </tr>
+
+          <tr class="govuk-table__row govuk-table__row--selected"></tr>
+            <td class="govuk-table__cell">
+              <div class="govuk-checkboxes__item govuk-checkboxes--small moj-multi-select__checkbox">
+                <input type="checkbox" class="govuk-checkboxes__input" id="devon" name="business-unit-upload" value="devon" >
+                <label class="govuk-label govuk-checkboxes__label govuk-!-padding-0" for="devon">
+                  <span class="govuk-visually-hidden">Select Devon</span>
+                </label>
+              </div>
+            </td>
+            <td class="govuk-table__cell">Devon</td>
+            <td class="govuk-table__cell">5</td>
+          </tr>
+
+        </tbody>
+      </table>
+    
+
+      {{ govukButton({
+        text: "Register, review and publish"
+      }) }}
+
+    </form>
   </div>
-</div> -->
+</div>
 
 
 {% endblock %}
