--- a/app/views/create-account/fixed-penalty-uploads/add-collection-orders.html
+++ b/app/views/create-account/fixed-penalty-uploads/add-collection-orders.html
@@ -17,7 +17,7 @@
 
         <h2 class="govuk-heading-m">Make collection orders</h2>
 
-        <p class="govuk-body">Review and consider making collection orders if you have Authorised Functions.</p>
+        <p class="govuk-body">Consider making collection orders if you have Authorised Functions.</p>
 
         <style>
           .govuk-table__header {
