--- a/app/views/create-account/fixed-penalty-uploads/add-collection-orders.html
+++ b/app/views/create-account/fixed-penalty-uploads/add-collection-orders.html
@@ -502,9 +502,9 @@
 
 
 
-        <h2 class="govuk-heading-m">Publish</h2>
+        <h2 class="govuk-heading-m">Publish all accounts</h2>
         
-        <!-- <p class="govuk-body">Notices and orders will be issued when you publish accounts live.</p> -->
+        <p class="govuk-body">You will be able to make amendments once the accounts are live.</p>
 
         {% if data['business-unit-upload'] == "avon_somerset" %}
         
