--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,10 +58,24 @@
       }) }} -->
 
       <p class="govuk-body">
+        <a class="govuk-link--no-visited-state" href="./create-account/create-account.html">
+        Manually create an account
+        </a>
+      </p> 
+
+      <p class="govuk-body">
        <a class="govuk-link--no-visited-state" href="./create-account/fixed-penalty-uploads/to-review.html">
         Fixed Penalty uploads
        </a>
       </p> 
+
+      <p class="govuk-body">
+        <a class="govuk-link--no-visited-state" href="./search/search.html">
+         Search
+        </a>
+      </p> 
+
+
 
       
 
