--- a/app/views/layouts/global.html
+++ b/app/views/layouts/global.html
@@ -6,7 +6,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 {% extends "govuk-prototype-kit/layouts/govuk-branded.njk" %}
 
 {% block header %}
-<div class="govuk-!-padding-top-3 govuk-!-padding-bottom-3" style="background-color: #ffdd00; width: 100%;" >
+<!-- <div class="govuk-!-padding-top-3 govuk-!-padding-bottom-3" style="background-color: #ffdd00; width: 100%;" >
   <div class="govuk-width-container">
    
    <p class="govuk-body govuk-!-margin-bottom-0">
@@ -16,7 +16,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
      For research purposes only. Some functions will not be available. 
     </p>
   </div>
-</div>
+</div> -->
 
 {{ mojHeader({
     navigationClasses: 'govuk-width-container',
